Overflow fix for phones view

--- a/src/app/home/main_menu/main_menu.component.css
+++ b/src/app/home/main_menu/main_menu.component.css
@@ -10,7 +10,8 @@
     opacity: 1;
     position: absolute;
     top: 20%;
-    overflow: hidden;
+    overflow-x: hidden;
+    overflow-y: auto;
 }
 
 
